# VirtualPostgreSQL

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: building.md  client-runtime.md  connection-credentials.md  dml-identity.md  metadata-functions-cache.md  planner-pushdown.md  platform-support.md  provider-abi.md  query-sources.md  read-only-vtable.md  release-notes-1.0.0.md  release-notes-current.md  sanitizers.md  security.md  spatial.md  static-analysis.md  streaming-cancellation.md  table-metadata.md  transactions-savepoints.md  troubleshooting.md  type-mapping.md  windows-1.0-acceptance.md  windows-current-acceptance.md
docs/prototypes/: libpq-findings.md
examples/: README.md  connection-modes.sql  credential-provider.c  dml-transactions.sql  query-profile-provider.c  read-only.sql  spatial.sql  windows-credential-provider.c
include/virtualpostgresql/: vps_api.h
licenses/: README.md
scripts/: build-stage1.ps1  package-windows.ps1
scripts/ci/: allowed-imports-release.txt  check-docs.ps1  expected-exports.txt  prepare-pg-matrix.ps1  run-fuzz.ps1  run-hardening.ps1  run-performance.ps1  run-pg-matrix.ps1  run-sanitizers.ps1  run-stage1.ps1  run-stage10.ps1  run-stage11.ps1  run-stage12.ps1  run-stage13.ps1  run-stage14.ps1  run-stage2.ps1  run-stage5.ps1  run-stage6.ps1  run-stage7.ps1  run-stage8.ps1  run-stage9.ps1  run-static-analysis.ps1  test-async-connect-stand.ps1  test-metadata-source.ps1  test-negative-fixtures.ps1  test-query-source.ps1  test-secure-zero.ps1  test-session-stand.ps1  test-source-tree.ps1  test-stage11-stand.ps1  test-stage12-stand.ps1  test-stage13-stand.ps1  test-stage14-stand.ps1  test-stage9-stand.ps1  test-tls-stand.ps1  test-vtable-stand.ps1  test-windows-binary.ps1  vps-ci-common.ps1
scripts/prototypes/: build.ps1  test-connect.ps1  test-postgis.ps1  test-stage0.ps1
scripts/release/: package-windows.ps1  run-reproducible-build.ps1  verify-windows-1.0.ps1
src/: virtualpostgresql.def  virtualpostgresql.rc  vps_abi.c  vps_android.c  vps_arguments.c  vps_arguments.h  vps_cancel.c  vps_cancel.h  vps_client.c  vps_client.h  vps_connection_pool.c  vps_connection_pool.h  vps_connection_string.c  vps_connection_string.h  vps_credential_provider.c  vps_credential_provider.h  vps_cursor.c  vps_cursor.h  vps_deadline.c  vps_deadline.h  vps_dml.c  vps_dml.h  vps_embedded_sqlite.c  vps_embedded_sqlite.h  vps_error.c  vps_error.h  vps_extension.c  vps_identity.c  vps_identity.h  vps_libpq_client.c  vps_libpq_client.h  vps_libpq_client_conninfo.c  vps_libpq_client_conninfo.h  vps_libpq_client_health.c  vps_libpq_client_internal.h  vps_libpq_client_metadata.c  vps_libpq_client_metadata.h  vps_libpq_client_session.c  vps_libpq_client_session.h  vps_libpq_client_statement.c  (+65 more)
tests/fuzz/: README.md  vps_arguments_fuzz.c  vps_arguments_seed_duplicate.txt  vps_arguments_seed_quoting.txt  vps_arguments_seed_valid.txt  vps_conninfo_fuzz.c  vps_conninfo_seed_valid.txt  vps_planner_fuzz.c  vps_planner_seed_wire.txt  vps_query_indexes_fuzz.c  vps_query_indexes_seed_valid.txt  vps_query_metadata_fuzz.c  vps_query_source_fuzz.c  vps_query_source_seed_reject.sql  vps_query_source_seed_select.sql  vps_redaction_fuzz.c  vps_redaction_seed_sensitive.txt  vps_row_identity_fuzz.c  vps_row_identity_seed_malformed.txt  vps_spatial.dict  vps_spatial_fuzz.c  vps_spatial_seed_ewkt.txt  vps_sql.dict  vps_type_codec_fuzz.c  vps_type_codec_seed_bytea.txt  vps_type_codec_seed_numeric.txt
tests/host/: README.md  vps_extension_host_test.c  vps_query_profile_host_test.c
tests/integration/: README.md  vps_libpq_client_connect_integration_test.c  vps_libpq_client_session_integration_test.c  vps_libpq_client_tls_integration_test.c  vps_support_integration_test.c
tests/performance/: README.md  vps_client_stream_performance_test.c  vps_materialization_performance_test.c
tests/unit/: README.md  vps_abi_layout_test.c  vps_arguments_test.c  vps_cancel_test.c  vps_client_test.c  vps_connection_pool_test.c  vps_connection_string_test.c  vps_credential_provider_test.c  vps_cursor_test.c  vps_deadline_test.c  vps_dml_test.c  vps_embedded_sqlite_test.c  vps_error_test.c  vps_extension_version_test.c  vps_identity_test.c  vps_libpq_client_test.c  vps_logging_test.c  vps_memory_test.c  vps_metadata_cache_test.c  vps_metadata_test.c  vps_planner_fuzz_smoke_test.c  vps_planner_test.c  vps_platform_contract_test.c  vps_query_boundary_test.c  vps_query_cache_test.c  vps_query_fingerprint_test.c  vps_query_metadata_test.c  vps_query_profile_test.c  vps_query_source_test.c  vps_query_validation_test.c  vps_retry_test.c  vps_row_identity_test.c  vps_schema_fingerprint_test.c  vps_session_test.c  vps_spatial_test.c  vps_temp_file_test.c  vps_tls_policy_test.c  vps_transaction_test.c  vps_type_codec_test.c  vps_type_registry_test.c  (+1 more)
tools/prototypes/: CMakeLists.txt  README.md  vps_libpq_link_probe.c  vps_proto_cancel.c  vps_proto_common.c  vps_proto_common.h  vps_proto_concurrency.c  vps_proto_connect.c  vps_proto_postgis.c  vps_proto_query.c  vps_proto_stream.c  vps_proto_transaction.c
